<resources>
    <string name="app_name">Riway</string>
    <string name="str_app_title">Riway</string>
    <string name="app_title_meaning">v.tr. to wake up</string>
    <string name="app_title_phonetical">|ree-woo-eye|</string>
    <string name="tv_upcoming_subtitle">Upcomming...</string>
    <string name="action_name_alarms_list">My alarms</string>
    <string name="str_authentication_key">auth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_text_new_alarm">Add a new alarm</string>
    <string name="title_alarm_list">Alarms</string>
    <string name="title_alarm_detail">Alarm Detail</string>
    <string name="snoozed_alarm_successfully">Snoozed!</string>
    <string name="label_alarm_property_repeat">Repeat</string>
    <string name="label_alarm_property_volume_level">Volume</string>
    <string name="label_alarm_property_song_name">Song</string>
    <string name="label_alarm_property_vibrate">Vibrate</string>
    <string name="label_alarm_property_challenge">Challenge</string>
</resources>